--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: Roboto;
   color: #212121;
@@ -12,7 +22,15 @@ body {
   line-height: 16px;
   letter-spacing: 0.02em;
 }
-.logo {
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid turquoise;
+}
+. .logo {
   color: #2196f3;
 }
 .logos {
@@ -40,6 +58,11 @@ a {
 }
 a:hover {
   color: #2196f3;
+}
+ul {
+  margin-bottom: 0;
+  list-style: none;
+  padding-left: 0;
 }
 .link {
   color: #2196f3;
@@ -69,11 +92,22 @@ a:hover {
 }
 .phone {
   color: #757575;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
 }
 .phone:hover {
   color: #2196f3;
 }
+.contacts {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .preview {
+  margin-top: 0;
+  margin-bottom: 46px;
   color: #ffffff;
   background-color: black;
   font-style: normal;
@@ -82,27 +116,83 @@ a:hover {
   line-height: 60px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  text-align: center;
+  width: 646px;
+  margin-left: 477px;
+  margin-right: 477px;
+}
+.conateiner-one {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  outline: 2px solid turquoise;
 }
 .button {
+  display: inline-block;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
-  display: flex;
   letter-spacing: 0.06em;
   color: #ffffff;
+  min-width: 200px;
+  padding: 10px 32px;
+  text-align: center;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 p {
   color: #757575;
 }
 .text {
+  margin-top: 0;
+  margin-bottom: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
 }
+.conateiner-two {
+  width: 1230px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid turquoise;
+}
+.conateiner-three {
+  width: 1230px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid turquoise;
+}
+.conateiner-four {
+  width: 1230px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: #f5f4fa;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  outline: 2px solid turquoise;
+}
+.conateiner-five {
+  width: 1230px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid turquoise;
+}
 .desc {
+  margin-top: 0;
+  margin-bottom: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -110,6 +200,8 @@ p {
   letter-spacing: 0.03em;
 }
 h2 {
+  margin-top: 0;
+  margin-bottom: 50px;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
@@ -117,6 +209,8 @@ h2 {
   letter-spacing: 0.03em;
 }
 h3 {
+  margin-top: 0;
+  margin-bottom: 0;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -124,7 +218,18 @@ h3 {
   letter-spacing: 0.03em;
   color: #212121;
 }
+.picture {
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+
 .item {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
@@ -134,6 +239,9 @@ h3 {
   color: #212121;
 }
 .items {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 27px 82px;
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
