--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ p {
 .text {
   width: 270px;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 94px;
   padding-right: 30px;
   font-style: normal;
   font-weight: normal;
@@ -194,8 +194,11 @@ p {
 .desc {
   margin-top: 0;
   margin-bottom: 0;
+  padding-top: 10px;
+  padding-bottom: 28px;
   font-style: normal;
   font-weight: normal;
+  text-align: center;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
@@ -210,18 +213,25 @@ h2 {
   letter-spacing: 0.03em;
   text-align: center;
 }
+.heading {
+  display: flex;
+  justify-content: center;
+  padding-top: 94px;
+}
 .none {
   display: none;
 }
 h3 {
   margin-top: 0;
   margin-bottom: 0;
+  padding-top: 30px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
   color: #212121;
+  text-align: center;
 }
 .picture {
   width: 270px;
@@ -235,6 +245,7 @@ h3 {
 .box {
   display: flex;
   padding-top: 94px;
+  justify-content: center;
 }
 .item {
   width: 270px;
@@ -251,7 +262,7 @@ h3 {
 }
 .items {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 94px;
   margin-right: 30px;
   padding: 27px 82px;
   font-style: normal;
@@ -267,9 +278,14 @@ h3 {
 }
 .items-title {
   display: flex;
+  justify-content: center;
 }
 .items-title > a {
   margin-right: 30px;
+}
+.meta {
+  display: flex;
+  justify-content: center;
 }
 .title {
   font-style: normal;
@@ -294,10 +310,23 @@ h3 {
 }
 .socials {
   display: flex;
-  width: 270 px;
+  padding-bottom: 36px;
+  justify-content: center;
 }
 .socials-title {
-  margin-right: 40px;
+  margin-right: 10px;
+  text-align: center;
+}
+.socials-title:last-child {
+  margin-right: 0;
+}
+.holder {
+  background: #ffffff;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  margin-right: 30px;
+  margin-bottom: 94px;
 }
 
 .popup {
@@ -317,6 +346,22 @@ h3 {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.4);
 }
+.list {
+  display: flex;
+}
+.list-title {
+  margin-right: 30px;
+  margin-bottom: 94px;
+}
+.list-title:last-child {
+  margin-right: 0;
+}
 .footer {
+  display: flex;
+  justify-content: center;
+  width: 1600px;
   background: #2f303a;
+}
+.content-title {
+  display: flex;
 }
