--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,31 @@ body {
   padding-right: 15px;
   outline: 2px solid turquoise;
 }
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 1230px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.flex-element {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.flex-element:nth-child(3n) {
+  margin-right: 0;
+}
 .logo {
   color: #2196f3;
 }
@@ -172,6 +197,8 @@ ul {
   color: #ffffff;
   min-width: 200px;
   padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -276,6 +303,16 @@ h3 {
   background: rgba(47, 48, 58, 0.8);
   border-radius: 0px 0px 4px 4px;
 }
+.list-items {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 .items-title {
   display: flex;
   justify-content: center;
@@ -288,6 +325,7 @@ h3 {
   justify-content: center;
 }
 .title {
+  color: #ffffff;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -295,6 +333,11 @@ h3 {
   letter-spacing: 0.03em;
 }
 .subject {
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-top: 20px;
+  margin-bottom: 4px;
+  text-align: left;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -302,6 +345,11 @@ h3 {
   letter-spacing: 0.06em;
 }
 .subtitle {
+  width: 322px;
+  margin-left: 24px;
+  padding-right: 24px;
+  margin-top: 0;
+  margin-bottom: 20px;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -338,8 +386,11 @@ h3 {
   color: #ffffff;
 }
 .aside {
+  margin-top: 0;
+  margin-bottom: 0;
   font-style: normal;
   font-weight: normal;
+  background: #2f303a;
   font-size: 12px;
   line-height: 24px;
   text-align: center;
@@ -358,10 +409,36 @@ h3 {
 }
 .footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   width: 1600px;
   background: #2f303a;
 }
 .content-title {
   display: flex;
+}
+.widget {
+  display: flex;
+  justify-content: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 94px;
+  margin-bottom: 50px;
+}
+.flex {
+  width: 1230px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 2px solid turquoise;
+}
+.widget-button {
+  display: inline-block;
+  text-align: center;
+  padding: 6px 22px;
+  margin-right: 8px;
+  background: #2196f3;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
